# StaticPy

./: CHANGELOG.txt  LICENCE.txt  LICENSE  README.md  pyproject.toml
StaticPy/: StaticPy.py  __init__.py
StaticPy/Compiler/: Generator.py  Lexer.py  Parser.py  Preloader.py
StaticPy/Compiler/Nodes/: Annotation.py  Expression.py  InitVariable.py
StaticPy/static_py/: types.py  use.py
