[build-system]
requires = ["setuptools>=69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StaticPy"
version = "0.0.1"
authors = [
  { name="Markada", email="markada.py@gmail.com" },
]
description = "This module is an add-on to the Python language, a new programming language that adds a lot of new functionality, for example: strong and explicit typing, a new type system, enumerations, constants and much more."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"